<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Xs And Os</string>
    <string name="menu_settings">Settings</string>
    <string name="desc_main_logo">Main Logo</string>
    <string name="label_button_one_player">One Player</string>
    <string name="label_button_two_player">Two Players</string>
    <string name="label_activity_game">Game</string>
    <string name="desc_board">Game Board</string>
    <string name="msg_player_one">Player X</string>
    <string name="msg_player_two">Player O</string>
    <string name="msg_new_game">Would you like to start a new game?</string>
    <string name="ok">OK</string>
    <string name="return_to_title">Title Screen</string>
    <string name="pref_random_start">Random starting player</string>
    <string name="pref_random_start_summ">If selected, the starting player will be selected at random for each game.</string>
    <string name="pref_key_gameplay_settings">Gameplay</string>
    <string name="label_activity_settings">Settings</string>
    <string name="dialog_shake_header">Clear the Board?</string>
    <string name="cancel">Cancel</string>
    <string name="new_game">Reset</string>
    <string name="clear_board">Clear the board?</string>
    <string name="pref_shake_to_clear">Shake to Clear</string>
    <string name="pref_shake_summ">If selected, will activate the shake gesture to clear the board.</string>

</resources>