<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@drawable/chalkboard" >
    <ImageView
        android:contentDescription="@string/desc_main_logo"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_logo"
        android:src="@drawable/title" />
    <Button
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startTwoPlayerGame"
        android:text="@string/label_button_two_player"
        android:id="@+id/button_two_player"
        style="@style/ChalkButton" />
    <Button
        android:layout_above="@id/button_two_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="startOnePlayerGame"
        android:text="@string/label_button_one_player"
        android:id="@+id/button_one_player"
        style="@style/ChalkButton" />

    <ImageButton
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_action_settings"
        android:background="@android:color/transparent"
        android:onClick="startSettings" />
    
</RelativeLayout>