<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingLeft="30dp"
    android:paddingRight="35dp"
    android:paddingBottom="30dp" >
    <TextView 
        android:id="@+id/dialog_header"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
		android:gravity="center"
		android:textScaleX="2"
		android:textStyle="bold"
		android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/msg_new_game"
		android:textColor="@android:color/white" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/dialog_new_game"
            style="@style/ChalkButtonNormal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/dialog_title_screen"
            style="@style/ChalkButtonNormal"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/return_to_title" />

    </LinearLayout>
</LinearLayout>
